Fixed overflow problem

--- a/public/stylesheets/picker.css
+++ b/public/stylesheets/picker.css
@@ -95,7 +95,7 @@ section.picker nav ul.choose li.right button {
 	#content section.preview.colour { display: block; width: 90%; margin-left: 5%; margin-top: 10px;}
 	#content section.preview.colour .running_total { display: none; }
 	
-	#content section.preview.colour .socialNetwork { background: #333; position: fixed; bottom: 40px; height: 40px; left: 0;}
+	#content section.preview.colour .socialNetwork { background: #333; position: fixed; bottom: 0; height: 40px; left: 0;}
 	#content section.preview.colour .socialNetwork li div { display: none; }
 	#content section.preview.colour .socialNetwork li div.icon { display: block; width: 100%; float: left; margin: 0; height: 100%; background-size: 20%;}
 	
